ecmascript/parser/tests/test262-error-references/fail/a069c2ecbeb0f43a.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/a069c2ecbeb0f43a.js:1:37
  |
1 | switch (cond) { case 10: let a = 20; 
  |                                     ^

error: Expected RBrace
 --> $DIR/tests/test262-parser/fail/a069c2ecbeb0f43a.js:1:36
  |
1 | switch (cond) { case 10: let a = 20; 
  |                                    ^

